fix: fix some ts and import issues

--- a/pages/blog/refactoring-to-vue-3.mdx
+++ b/pages/blog/refactoring-to-vue-3.mdx
@@ -6,7 +6,7 @@ description:
 "Using the composition API to express reusable stateful logic in VueJS",
 thumbnail: "/blog/refactoring-to-vue-3/thumbnail.png",
 };
-import { BlogCodeWalkthroughLayout } from "../../components/blog/refactoring-to-vue-3/BlogCodeWalkthroughLayout";
+import BlogCodeWalkthroughLayout from "../../components/blog/refactoring-to-vue-3/BlogCodeWalkthroughLayout";
 export default (props) => (
 <BlogCodeWalkthroughLayout {...props} metadata={metadata} />
 );
