--- a/pages/blog/you-cant-replace-redux-with-hooks-and-context.mdx
+++ b/pages/blog/you-cant-replace-redux-with-hooks-and-context.mdx
@@ -122,7 +122,7 @@ With a selector, we have control over the amount of times the app re-renders, in
 
 ---
 
-Up next, we will build a small library to implement this basic approach to state management, that is the backbone of all state management libraries. We will do it in 30 lines of code (give or take), without adding anything extra besides that which is extremely necessary.
+Up next, we will build a small library to implement this basic approach to state management, that is the backbone of all state management libraries. We will do it in 30 lines of code (give or take), without adding anything extra besides the strictly necessary.
 
 
 ## Building a simple state manager
