Add cannonical links (migrating to a new blog)

--- a/pages/blog/generated-color-palettes.mdx
+++ b/pages/blog/generated-color-palettes.mdx
@@ -5,6 +5,7 @@ export const metadata = {
   description:
     "Why you shouldn’t trust color functions like hsl(), lighten() or darken()",
   thumbnail: "/blog/generated-color-palettes/thumbnail.svg",
+  cannonical: "https://www.francanobr.com/blog/articles/2021-07-02-generated-color-palettes",
 };
 
 import BlogPostLayout from "../../components/BlogPostLayout";
