--- a/pages/blog/history-of-react.mdx
+++ b/pages/blog/history-of-react.mdx
@@ -3,6 +3,7 @@ export const metadata = {
   title: "History of React and Modern JS Frameworks",
   description:
     "We take a look into the history of React and the declarative paradigm for building UIs",
+  cannonical: "https://www.francanobr.com/blog/articles/2021-07-02-generated-color-palettes",
 };
 
 import BlogPostLayout from "../../components/BlogPostLayout";
