--- a/pages/blog/you-cant-replace-redux-with-hooks-and-context.mdx
+++ b/pages/blog/you-cant-replace-redux-with-hooks-and-context.mdx
@@ -4,6 +4,7 @@ export const metadata = {
   socialImage: "/blog/you-cant-replace-redux-with-hooks-and-context/social-image.png",
   description: "Creating a simple state management solution from scratch.",
   thumbnail: "/blog/you-cant-replace-redux-with-hooks-and-context/thumbnail.png",
+  cannonical: "https://www.francanobr.com/blog/articles/2023-01-24-you-cant-replace-redux-with-hooks-and-context",
 };
 
 import Layout from "../../components/Layout";
